data ingestion done

--- a/notebooks/research.ipynb
+++ b/notebooks/research.ipynb
@@ -7,16 +7,21 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "import mlflow\n",
     "import pandas as pd\n",
-    "from sklearn.model_selection import train_test_split\n",
-    "from sklearn.preprocessing import StandardScaler, OneHotEncoder, LabelEncoder\n",
-    "from sklearn.impute import SimpleImputer\n",
     "from sklearn.compose import ColumnTransformer\n",
-    "from sklearn.pipeline import Pipeline\n",
-    "from sklearn.metrics import accuracy_score, precision_score, f1_score, recall_score, roc_auc_score\n",
-    "from sklearn.model_selection import GridSearchCV, KFold\n",
     "from sklearn.ensemble import RandomForestClassifier\n",
-    "import mlflow"
+    "from sklearn.impute import SimpleImputer\n",
+    "from sklearn.metrics import (\n",
+    "    accuracy_score,\n",
+    "    f1_score,\n",
+    "    precision_score,\n",
+    "    recall_score,\n",
+    "    roc_auc_score,\n",
+    ")\n",
+    "from sklearn.model_selection import GridSearchCV, KFold, train_test_split\n",
+    "from sklearn.pipeline import Pipeline\n",
+    "from sklearn.preprocessing import LabelEncoder, OneHotEncoder, StandardScaler"
    ]
   },
   {
@@ -122,6 +127,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "7fb27b941602401d91542211134fc71a",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -284,7 +290,7 @@
     "        with mlflow.start_run(run_name=f\"GridSearchTrial_{i}\", nested=True):\n",
     "            mlflow.log_params(results[\"params\"][i])\n",
     "            mlflow.log_metric(\"mean_test_score\", results[\"mean_test_score\"][i])\n",
-    "            mlflow.log_metric(\"std_test_score\", results[\"std_test_score\"][i])\n"
+    "            mlflow.log_metric(\"std_test_score\", results[\"std_test_score\"][i])"
    ]
   }
  ],
