--- a/notebooks/load_data_to_mongodb.ipynb
+++ b/notebooks/load_data_to_mongodb.ipynb
@@ -9,6 +9,7 @@
    "source": [
     "import pandas as pd\n",
     "import pymongo\n",
+    "\n",
     "from loanApprovalPrediction.config import configuration"
    ]
   },
@@ -19,7 +20,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "config= configuration.ConfigurationManager()\n",
+    "config = configuration.ConfigurationManager()\n",
     "data_ingestion_config = config.get_data_ingestion_config()"
    ]
   },
@@ -51,7 +52,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "data = df.to_dict(orient='records')\n",
+    "data = df.to_dict(orient=\"records\")\n",
     "# data"
    ]
   },
