--- a/notebooks/research.ipynb
+++ b/notebooks/research.ipynb
@@ -7,7 +7,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import mlflow\n",
     "import pandas as pd\n",
     "from sklearn.compose import ColumnTransformer\n",
     "from sklearn.ensemble import RandomForestClassifier\n",
@@ -21,7 +20,8 @@
     ")\n",
     "from sklearn.model_selection import GridSearchCV, KFold, train_test_split\n",
     "from sklearn.pipeline import Pipeline\n",
-    "from sklearn.preprocessing import LabelEncoder, OneHotEncoder, StandardScaler"
+    "from sklearn.preprocessing import LabelEncoder, OneHotEncoder, StandardScaler\n",
+    "import mlflow"
    ]
   },
   {
