--- a/notebooks/research.ipynb
+++ b/notebooks/research.ipynb
@@ -7,6 +7,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "import mlflow\n",
     "import pandas as pd\n",
     "from sklearn.compose import ColumnTransformer\n",
     "from sklearn.ensemble import RandomForestClassifier\n",
@@ -20,8 +21,7 @@
     ")\n",
     "from sklearn.model_selection import GridSearchCV, KFold, train_test_split\n",
     "from sklearn.pipeline import Pipeline\n",
-    "from sklearn.preprocessing import LabelEncoder, OneHotEncoder, StandardScaler\n",
-    "import mlflow"
+    "from sklearn.preprocessing import LabelEncoder, OneHotEncoder, StandardScaler"
    ]
   },
   {
@@ -188,11 +188,14 @@
    "outputs": [],
    "source": [
     "param_grid = {\n",
-    "    \"classifier__n_estimators\": [50, 100, 200],\n",
-    "    \"classifier__max_depth\": [None, 10, 20],\n",
-    "    \"classifier__min_samples_split\": [2, 5],\n",
-    "    \"classifier__max_features\": [\"sqrt\", \"log2\"],\n",
+    "    \"classifier__n_estimators\": [100, 200, 300],\n",
+    "    \"classifier__max_depth\": [None, 10, 20, 30],\n",
+    "    \"classifier__min_samples_split\": [2, 5, 10],\n",
+    "    \"classifier__min_samples_leaf\": [1, 2, 4],\n",
+    "    \"classifier__max_features\": [\"sqrt\", \"log2\", None],\n",
+    "    \"classifier__bootstrap\": [True, False]\n",
     "}\n",
+    "\n",
     "grid_search = GridSearchCV(\n",
     "    full_pipeline,\n",
     "    param_grid,\n",
