--- a/notebooks/research.ipynb
+++ b/notebooks/research.ipynb
@@ -193,7 +193,7 @@
     "    \"classifier__min_samples_split\": [2, 5, 10],\n",
     "    \"classifier__min_samples_leaf\": [1, 2, 4],\n",
     "    \"classifier__max_features\": [\"sqrt\", \"log2\", None],\n",
-    "    \"classifier__bootstrap\": [True, False]\n",
+    "    \"classifier__bootstrap\": [True, False],\n",
     "}\n",
     "\n",
     "grid_search = GridSearchCV(\n",
